# eftx_antenna_pattern

./: .editorconfig  .env.example  .gitignore  .swp  CHANGELOG.md  README.md  alembic.ini  autoapp.py  deploy.sh  descricao.md  eftx_app.md  pip-freeze.txt  pip.cmd  proc.md  prompt.txt  pross.md  pyproject.toml  requirements.txt  run.py  site_novo.md  testeia.py  wsgi.py
alembic/: env.py  script.py.mako
alembic/versions/: 20250930_000001_create_core_tables.py
app/: __init__.py  cli.py  config.py  extensions.py  models.py
app/blueprints/: __init__.py
app/core/: __init__.py  assistant_institutional.py  site_content.py
app/forms/: admin.py  auth.py  project.py
app/rs_core/: __init__.py  diffraction_knife_edge.py  lines.py  microstrip.py  sparams.py  units.py  waveguide.py
app/services/: antenna_extractor.py  assistant.py  cable_extractor.py  cabos_service.py  email.py  exporters.py  knowledge_base.py  metrics.py  pattern_composer.py  pattern_parser.py  visuals.py
app/templates/: base.html
app/utils/: calculations.py  cookies.py  security.py  templating.py
docs/: 00-auditoria.md  01-plano.md  SETUP.md  aplicativos-rf.md  eftx_knowhow.md  public_faq.md  public_site_overview.md
migrations/versions/: 1ab3c9d4ee01_add_datasheet_to_antennas.py  20250930_000001_create_core_tables.py  2d2f31cbb9d1_add_cabos_table.py  3cf2a7b8d912_add_gain_table_to_antennas.py  3e83237a9467_.py  46986b249afd_.py  6d11b0f5a7aa_add_category_and_thumbnail_to_antennas.py  730014782f4e_.py  7a1b4f2e3abc_extend_cabos_characteristics.py  8b4e91acba2d_add_assistant_conversations.py  9c2e5a1d7f10_drop_att_db_per_100m_from_cabos.py  ba5e0f7c3f1a_add_site_content_tables.py
tests/: conftest.py
tests/blueprints/: test_aplicativos_rf.py
tests/rs_core/: test_diffraction.py  test_lines.py  (+3 more)
vector_store/: embeddings.npy  metadata.json
(+59 files in other folders)
